# darkmod_src

./: .editorconfig  .gitignore  CMakeLists.txt  COMPILING.txt  COMPILING_ext.txt  LICENSE.txt  MayaImport.vcproj  MayaImport.vcxproj  MayaImport.vcxproj.filters  Parallel Mission Loading.docx  README.linux  README.txt  SConstruct  TheDarkMod.sln  _Common.props  _Game.props  appveyor.yml  curllib.vcxproj  d3game.sln  d3game.vcproj  darkmod.vcxproj  darkmod.vcxproj.filters  darkmodNT.vcxproj  darkmodNT.vcxproj.filters  darkmod_src.cfg  debug.sh  doom.sln  doomdll.vcxproj  dummy.txt  engine.vcxproj  engine.vcxproj.filters  eula.development kit.rtf  game.vcxproj  game.vcxproj.filters  gen_svnversion.cmd  idlib.natvis  idlib.vcproj  idlib.vcxproj  idlib.vcxproj.filters  linuxBuild.sh  (+5 more)
.github/: README.md
DarkMod/: AIComm_Message.cpp  AIComm_Message.h  AIComm_StimResponse.cpp  AIComm_StimResponse.h  AIVehicle.cpp  AIVehicle.h  AbsenceMarker.cpp  AbsenceMarker.h  BinaryFrobMover.cpp  BinaryFrobMover.h  BloodMarker.cpp  BloodMarker.h  ButtonStateTracker.cpp  ButtonStateTracker.h  CImage.cpp  CImage.h  DarkModGlobals.cpp  DarkModGlobals.h  DarkRadiantRCFInterface.h  DarkRadiantRCFServer.cpp  DarkRadiantRCFServer.h  DarkmodAASHidingSpotFinder.cpp  DarkmodAASHidingSpotFinder.h  DifficultyManager.cpp  DifficultyManager.h  DifficultyMenu.cpp  DifficultyMenu.h  DifficultySettings.cpp  DifficultySettings.h  DownloadMenu.cpp  DownloadMenu.h  EMissionResult.h  EscapePointEvaluator.cpp  EscapePointEvaluator.h  EscapePointManager.cpp  EscapePointManager.h  FrobButton.cpp  FrobButton.h  FrobDoor.cpp  FrobDoor.h  (+131 more)
ExtLibs/: Export.h  ExtLibs.props  ExtLibs.vcxproj  ExtLibs.vcxproj.filters  curl.cpp  curl.h  devil.cpp  devil.h  ffmpeg.cpp  ffmpeg.h  jpeg.cpp  jpeg.h  stdafx.cpp  stdafx.h  vorbis.cpp  vorbis.h  zip.cpp  zip.h  zlib.cpp  zlib.h
MayaImport/: exporter.h  maya_main.cpp  maya_main.h
TypeInfo/: TypeInfoGen.cpp  TypeInfoGen.h  main.cpp
cm/: CollisionModel.h  CollisionModel_contacts.cpp  CollisionModel_contents.cpp  CollisionModel_debug.cpp  CollisionModel_files.cpp  CollisionModel_load.cpp  CollisionModel_local.h  CollisionModel_rotate.cpp  CollisionModel_trace.cpp  CollisionModel_translate.cpp  collisionmodel.h
dmlauncher/: D3ProcessChecker.cpp  D3ProcessChecker.h  Launcher.cpp  Launcher.h  SConscript.tdmlauncher  SConstruct  TraceLog.cpp  TraceLog.h  dmlauncher.cpp  dmlauncher.rc  dmlauncher.sln  dmlauncher.vcproj  macosx_build.sh  scons_utils.py  tdmlauncher.sln  tdmlauncher.vcxproj  tdmlauncher.vcxproj.filters
framework/: BuildDefines.h  BuildVersion.h  CVarSystem.cpp  CVarSystem.h  CmdSystem.cpp  CmdSystem.h  Common.cpp  Common.h  CompressionParameters.h  Compressor.cpp  Compressor.h  Console.cpp  Console.h  DeclAF.cpp  DeclAF.h  DeclEntityDef.cpp  DeclEntityDef.h  DeclFX.cpp  DeclFX.h  DeclManager.cpp  DeclManager.h  DeclPDA.cpp  DeclPDA.h  DeclParticle.cpp  DeclParticle.h  DeclSkin.cpp  DeclSkin.h  DeclSubtitles.cpp  DeclSubtitles.h  DeclTable.cpp  DeclTable.h  DemoChecksum.h  DemoFile.cpp  DemoFile.h  EditField.cpp  EditField.h  EventLoop.cpp  EventLoop.h  File.cpp  File.h  (+39 more)
game/: AF.cpp  AF.h  AFEntity.cpp  AFEntity.h  AIComm_Message.cpp  AIComm_Message.h  AIVehicle.cpp  AIVehicle.h  AbsenceMarker.cpp  AbsenceMarker.h  Actor.cpp  Actor.h  BinaryFrobMover.cpp  BinaryFrobMover.h  BloodMarker.cpp  BloodMarker.h  BrittleFracture.cpp  BrittleFracture.h  ButtonStateTracker.cpp  ButtonStateTracker.h  CImage.cpp  CImage.h  Camera.cpp  Camera.h  DarkModGlobals.cpp  DarkModGlobals.h  DarkmodAASHidingSpotFinder.cpp  DarkmodAASHidingSpotFinder.h  DifficultyManager.cpp  DifficultyManager.h  DifficultySettings.cpp  DifficultySettings.h  DownloadMenu.cpp  DownloadMenu.h  Emitter.cpp  Emitter.h  Entity.cpp  Entity.h  EntityList.cpp  EntityList.h  (+219 more)
glprogs/: HeatHazeWithMaskAndDepth.fs  HeatHazeWithMaskAndDepth.vfp  HeatHazeWithMaskAndDepth.vs  adaptLum.fs  adaptLum.vfp  adaptLum.vs  afxadd.fs  afxadd.vfp  afxadd.vs  afxblend.fs  afxblend.vfp  afxblend2.fs  afxblend2.vfp  afxmodulate.fs  afxmodulate.vfp  afxmodulate.vs  afxweight.fs  afxweight.vfp  afxweight.vs  ambientEnvVertexBlend.fs  ambientEnvVertexBlend.vfp  ambientEnvVertexBlend.vs  ambientEnvironment.fs  ambientEnvironment.vfp  ambientEnvironment.vs  ambientInteraction.fs  ambientInteraction.vs  ambientLight.fs  ambientLight.vfp  ambientLight.vs  ambient_cubic_light.fs  ambient_cubic_light.vfp  ambient_cubic_light.vs  autoExposure.fs  autoExposure.vs  avgLum.fs  avgLum.vfp  avgLum.vs  avgLumInitial.fs  avgLumInitial.vfp  (+203 more)
idlib/: Allocators.h  Base64.cpp  Base64.h  BitMsg.cpp  BitMsg.h  CmdArgs.cpp  CmdArgs.h  Debug.cpp  Debug.h  Dict.cpp  Dict.h  Heap.cpp  Heap.h  Heap_Embedded.cpp  Heap_Embedded.h  Image.cpp  Image.h  LangDict.cpp  LangDict.h  Lexer.cpp  Lexer.h  Lib.cpp  Lib.h  MapFile.cpp  MapFile.h  ParallelJobList.cpp  ParallelJobList.h  ParallelJobList_JobHeaders.h  Parser.cpp  Parser.h  RevisionTracker.cpp  RevisionTracker.h  StdFilesystem.cpp  StdFilesystem.h  StdString.cpp  StdString.h  Str.cpp  Str.h  Thread.cpp  Thread.h  (+34 more)
lib/: DevIL.lib
rcflib/: DarkRadiantRCFServer.cpp  DarkRadiantRCFServer.h
renderer/: AmbientOcclusionStage.cpp  AmbientOcclusionStage.h  BloomStage.cpp  BloomStage.h  BufferObject.cpp  BufferObject.h  Cinematic.cpp  Cinematic.h  CinematicFFMpeg.cpp  CinematicFFMpeg.h  CinematicID.cpp  CinematicID.h  FrameBuffer.cpp  FrameBuffer.h  FrameBufferManager.cpp  FrameBufferManager.h  GLSLProgram.cpp  GLSLProgram.h  GLSLProgramManager.cpp  GLSLProgramManager.h  GLSLUniforms.h  GuiModel.cpp  GuiModel.h  Image.h  Image_files.cpp  Image_init.cpp  Image_load.cpp  Image_process.cpp  Image_program.cpp  ImmediateRendering.cpp  ImmediateRendering.h  Interaction.cpp  Interaction.h  Material.cpp  Material.h  MegaTexture.cpp  MegaTexture.h  Model.cpp  Model.h  ModelDecal.cpp  (+98 more)
scripts/: ai_darkmod_base.script  darkmod_ai_constants.script  darkmod_events.script
sound/: efxlib.h  snd_cache.cpp  snd_decoder.cpp  snd_efxfile.cpp  snd_efxpresets.cpp  snd_efxpresets.h  snd_emitter.cpp  snd_local.h  snd_shader.cpp  sound.h  (+3 more)
(+2237 files in other folders)
